# linear-issue-enhancer

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  fly.toml  pyproject.toml
scripts/: deploy-fly.sh
src/: api.py  github_cache.py  linear.py  main.py  tools.py  tracing.py
src/agents/: __init__.py  code_researcher.py  context_researcher.py  issue_writer.py  model.py  question_answerer.py
src/commands/: __init__.py  command.py  registry.py  shared.py  tasks.py  threading.py
src/commands/handlers/: __init__.py  ask.py  help.py  retry.py
src/commands/handlers/ask/: __init__.py  handler.py  task.py
src/commands/handlers/enhance/: __init__.py  handler.py  task.py
src/commands/handlers/help/: __init__.py  handler.py
src/commands/handlers/retry/: __init__.py  handler.py  task.py
src/sync/: __init__.py  config.py  connector.py  gdrive.py  registry.py  slack.py
src/sync/connectors/: __init__.py  gdrive.py  github.py  gmail.py  slack.py
tests/: conftest.py  test_api.py  test_commands.py  test_config.py  test_sync.py
